# common-ancestor

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  trees-0.4.db
balancer/: Dockerfile  balancer.conf
html/: index.html
src/: CMakeLists.txt  abstract_protocol.h  data-adapter.h  main.cpp  mini-parser.h  sqlitedb.h  tree-controller.h  tree-parser.h  tree.h  version.h.in
src/test/integration/: index-page.sh  post-tree.sh  retrieve-common-ancestor.sh
src/test/unit/: data-adapter-test.cpp  mem-adapter.h  memtree.h  mini-parser-test.cpp  test.cpp  tree-controller-test.cpp  tree-parser-test.cpp  tree-test.cpp
